[package]
name = "messiah-mpk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
simple_logger = "2.1"
log = "0.4"
bytesize = "1"
byteorder = "1"
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
try-insert-ext = "*"
indicatif = "0.16"
lz4_flex = { version = "0.9", default-features = false, features = ["std"] }
walkdir = "2"
compress = "0.2"
