[package]
name = "messiah-mpk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
simple_logger = "5.0"
log = "0.4"
byteorder = "1"
thiserror = "2"
anyhow = { version = "1", features = ["backtrace"] }
try-insert-ext = "*"
indicatif = "0.17"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
compress = "0.2"
lzma-rs = "0.3"
tree_magic_mini = "3.1.6"
