[package]
name = "messiah-pyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4"
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
indicatif = "0.16"
walkdir = "2"
glob = "0.3.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "env-filter",
    "tracing-log",
] }

rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", features = [
    "freeze-stdlib",
    "rustpython-compiler",
    "jit",
] }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython.git" }
